--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="navbar">
         <h3>Quiz</h3>
         <nav>
-            <a href="./">Home</a>
+            <a href="./" class="active">Home</a>
             <a href="./quiz/">Quiz</a>
             <a href="./leaderboard/">Leaderboard</a>
         </nav>
