--- a/quiz/index.html
+++ b/quiz/index.html
@@ -18,7 +18,7 @@
         <h3>Quiz</h3>
         <nav>
             <a href="../">Home</a>
-            <a href="./">Quiz</a>
+            <a href="./" class="active">Quiz</a>
             <a href="../leaderboard/">Leaderboard</a>
         </nav>
     </header>
