--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="../">Home</a>
             <a href="../quiz/">Quiz</a>
-            <a href="./">Leaderboard</a>
+            <a href="./" class="active">Leaderboard</a>
         </nav>
     </header>
     <main>
